tests/expectations/compiler/function/program_function_no_constant_mode_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372006]: function `foo` shadowed by
    --> compiler-test:7:5
     |
   7 |     transition foo(a: u8) -> constant u8 {
   8 |         return a + a;
   9 |     }
     |     ^
"""]
